--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
     "builds":[
         {
-            "src":"backend/server.js",
+            "src":"/backend/server.js",
             "use":"@vercel/node"
         }
     ],
     "routes":[
         {
             "src":"/.*",
-            "dest":"server.js"
+            "dest":"/backend/server.js"
         }
     ]
 }
