--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "talk-way-tive",
+  "name": "zonked-hall-6274",
   "version": "1.0.0",
-  "description": "chat app",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "server": "nodemon backend/server.js",
-    "start": "node backend/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/srjizhere/zonked-hall-6274.git"
   },
-  "author": "Suraj Patil",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/srjizhere/zonked-hall-6274/issues"
@@ -20,11 +21,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
-    "dotenv": "^16.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.4",
-    "socket.io": "^4.6.0"
+    "mongoose": "^7.3.0",
+    "socket.io": "^4.6.2"
   }
 }
