--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.1",
+    "socket.io": "^4.7.1"
+  },
   "name": "zonked-hall-6274",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "devDependencies": {},
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start":"node ./backend/server.js",
+    "dev":"nodemon ./backend/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,15 +29,5 @@
     "url": "https://github.com/srjizhere/zonked-hall-6274/issues"
   },
   "homepage": "https://github.com/srjizhere/zonked-hall-6274#readme",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.0",
-    "socket.io": "^4.6.2"
-  }
+  "description": ""
 }
