--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,8 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "start":"node ./backend/server.js",
-    "dev":"nodemon ./backend/server.js"
+    "start":"node server.js",
+    "dev":"nodemon server.js"
   },
   "repository": {
     "type": "git",
